issue/ast-unexpected-indent/ISSUE.txt
[ 2 ] phdyex @ xps-ne ~/src/wrapped/dlocate
$ nam=dlocate && PYTHONPATH=. pyonetrue --output=flat/$nam.py $nam
Traceback (most recent call last):
  File "/home/phdyex/scripts/pyonetrue", line 1353, in <module>
    exit(main(sys.argv))
         ^^^^^^^^^^^^^^
  File "/home/phdyex/scripts/pyonetrue", line 123, in main
    return run_cli_logic(opt)
           ^^^^^^^^^^^^^^^^^^
  File "/home/phdyex/scripts/pyonetrue", line 735, in run_cli_logic
    populate_flattening_context(ctx, cli)
  File "/home/phdyex/scripts/pyonetrue", line 703, in populate_flattening_context
    ctx.discover_modules(
  File "/home/phdyex/scripts/pyonetrue", line 328, in discover_modules
    self.add_module(subpath)
  File "/home/phdyex/scripts/pyonetrue", line 256, in add_module
    spans = extract_spans(fm.path)
            ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/phdyex/scripts/pyonetrue", line 148, in extract_spans
    tree = ast.parse(source, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 1
    if sys.platform == "win32":
IndentationError: unexpected indent

